fix overflow scroll

--- a/css/devconsole.css.sass
+++ b/css/devconsole.css.sass
@@ -91,11 +91,14 @@ html,body
     height: 100%
     margin: 0
     padding: 0
-    overflow: auto
+    overflow: hidden
     overflow-x: hidden
     z-index: 1001
     /*-webkit-overflow-scrolling: touch*/
 
+  .pn-panel:hover 
+    overflow-y: scroll
+    
   .panel-content
     padding: 0
     margin: 0
